<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Password Locker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="title_activity_view_pass">View Details</string> 
    <string name="exit">Exit</string>
    <string name="action_search">Search</string>
    
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="your_secrets">Write your secrets here</string>
    <string name="desc">NB : If you want to save the file with a new password, Enter it above. Else the file is saved with the old password.</string>
	<string name="default_pass">Your Default password is password. Please change this passord while saving your data for the first time.</string>
	
	<string name="search_hint">Search</string>
	<string name="pass_length">Password Length (Min 4)</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="auto_generate_pass">Auto Generate Password</string>
	<string name="generate">Generate</string>
	<string name="use_password">Use Password</string>
	<string name="dewcis_url">http://dewcis.com/</string>
	
</resources>
