<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:BpwApplication="http://schemas.android.com/apk/res-auto">
      
      <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          BpwApplication:showAsAction="ifRoom|collapseActionView"
          BpwApplication:actionViewClass="android.support.v7.widget.SearchView" />
      
      <item android:id="@+id/action_genpass"
          android:title="@string/auto_generate_pass"
          android:icon="@drawable/ic_action_accounts"
          BpwApplication:showAsAction="ifRoom"/>
      
    <item android:id="@+id/mnu_exit"
        BpwApplication:showAsAction="ifRoom"
        android:title="@string/exit"
        android:icon="@drawable/ic_action_back"/>

</menu>
