<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewPassActivity" 
    android:orientation="vertical">
    
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:baselineAligned="false">
	    <EditText
	        android:id="@+id/txtNewPassword"
	        android:layout_width="0dp"
	        android:layout_weight="3"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:hint="@string/new_password">
	        
	    </EditText>
	    
	    <Button 
	        android:id="@+id/btnSaveNew"
	        android:layout_width="0dp"
	        android:layout_weight="2"
	        android:layout_height="match_parent"
	        android:drawableLeft="@drawable/ic_action_save"
	        android:text="@string/save"/>
	</LinearLayout>
	<ScrollView
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content">
	    <LinearLayout
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
		    <EditText
		        android:id="@+id/txtSecrets"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textMultiLine"
		        android:hint="@string/your_secrets" 
		        android:layout_marginTop="@dimen/activity_horizontal_margin"/>
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/desc"
		        android:layout_marginTop="@dimen/activity_horizontal_margin"/>		    
		</LinearLayout>
	</ScrollView>
    
</LinearLayout>
