<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_vertical|center_horizontal"
        >

        <ImageView
            android:id="@+id/dewcisLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dewcis_logo"
            android:layout_marginTop="14dp" />
        <EditText 
            android:id="@+id/txtPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/password"
	        android:layout_marginTop="14dp"/>
        <Button 
            android:id="@+id/btnOpen"
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/open"
	        android:layout_marginTop="14dp"
	        android:drawableRight="@drawable/ic_action_send_now"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:padding="4dp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/dewcis_url"
            android:textColor="@color/abc_search_url_text_holo" />
        
    </LinearLayout>
    
    

</ScrollView>
